# app/Http/Requests/CreateGoalRequest.php
@@ -2,7 +2,9 @@
 
 namespace App\Http\Requests;
 
+use App\Enums\RepeatTypes;
 use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\Rule;
 
 class CreateGoalRequest extends FormRequest
 {
@@ -24,6 +26,15 @@ class CreateGoalRequest extends FormRequest
         return [
             'title' => ['required', 'string', 'max:255'],
             'details' => ['string'],
+            'tasks' => ['array'],
+            'tasks.*.title' => ['required', 'string', 'max:255'],
+            'tasks.*.details' => ['string'],
+            'tasks.*.all_day' => ['boolean'],
+            'tasks.*.block_id' => ['integer', 'exists:blocks,id'],
+            'tasks.*.recurrence_interval' => ['integer'],
+            'tasks.*.recurrence_type' => ['string', Rule::in(array_column(RepeatTypes::cases(), 'value'))],
+            'tasks.*.start_date' => ['date', 'after_or_equal:today'],
+            'tasks.*.end_date' => ['date', 'after_or_equal:start_date'],
         ];
     }
 }
