# app/Http/Requests/CreateHabitRequest.php
@@ -2,8 +2,10 @@
 
 namespace App\Http\Requests;
 
+use App\Enums\RepeatTypes;
 use Illuminate\Contracts\Validation\ValidationRule;
 use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\Rule;
 
 class CreateHabitRequest extends FormRequest
 {
@@ -25,6 +27,15 @@ class CreateHabitRequest extends FormRequest
         return [
             'title' => ['required', 'string', 'max:255'],
             'details' => ['string'],
+            'tasks' => ['array'],
+            'tasks.*.title' => ['required', 'string', 'max:255'],
+            'tasks.*.details' => ['string'],
+            'tasks.*.all_day' => ['boolean'],
+            'tasks.*.block_id' => ['integer', 'exists:blocks,id'],
+            'tasks.*.recurrence_interval' => ['integer'],
+            'tasks.*.recurrence_type' => ['string', Rule::in(array_column(RepeatTypes::cases(), 'value'))],
+            'tasks.*.start_date' => ['date', 'after_or_equal:today'],
+            'tasks.*.end_date' => ['date', 'after_or_equal:start_date'],
         ];
     }
 }
